[package]
name = "ltcs_compiler"
version = "0.1.0"
authors = ["MainShayne233 <shaynetremblay@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[build-dependencies.lalrpop]
version = "0.18.1"
features = ["lexer"]

[dependencies]
wasm-bindgen = "0.2.60"
lalrpop-util = "0.18.1"
regex = "1"
